# mmf

./: .gitignore  CMakeLists.txt  Makefile  README.md  tobuild.txt
cuda/: optimizationSO3.cu  optimizationSO3_approx.cu  optimizationSO3_direct_gd.cu  optimizationSO3_squared.cu  optimizationSO3_vmf.cu  optimizationSO3_weighted.cu  testReduction.cu  vectorSum_kernel.cu
cuda/deprecated/: cuda_pcl_helpers.cu
include/deprecated/: cv_helpers.hpp  pcl_helpers.hpp  realtimeMF.hpp  timer.hpp
include/deprecated/jsCore/: gpuMatrix.hpp
include/jsCore/: global.hpp
include/mmf/: cudaSphereHelpers.h  optimizationSO3.hpp  optimizationSO3_approx.hpp  optimizationSO3_approx_gd.hpp  optimizationSO3_gd.hpp  optimizationSO3_mmfvmf.hpp  optimizationSO3_vmf.hpp  optimizationSO3_vmfCF.hpp  root_includes.hpp  sphereSimple.hpp
include/nvidia_deprecated/: helper_cuda.h
librealtimeMF/: CMakeLists.txt
matrix_tv/: SimpleImage.cu  SimpleImage.h  SimpleProfiler.cpp  adaptive_camera.cu  adaptive_camera.h  compile_mex.m  fixed_vector.h  gpu_random.h  mex_adaptive_camera.mexa64  mex_normal_denoising.mexa64  normal_smoothing.cu  normal_smoothing.h  sample_gaussian_additive_image.cu  test.cpp  test.cu  test_mex_normal_denoising.m
matrix_tv/.svn/: entries
matrix_tv/.svn/text-base/: CMakeLists.txt.svn-base  SimpleProfiler.h.svn-base  fixed_matrix.h.svn-base  gpu_random.cu.svn-base  mex_adaptive_camera.cpp.svn-base  mex_normal_denoising.cpp.svn-base  normal_smoothing.cu.svn-base  rendering.cu.svn-base  test_mex_normal_denoising.m.svn-base
python/: angularDeviationBetweenMFambiguities.py  cudaVectorReduce.py
src/: optimizationSO3.cpp  optimizationSO3_approx.cpp  optimizationSO3_approx_gd.cpp  optimizationSO3_gd.cpp  optimizationSO3_mmfvmf.cpp  optimizationSO3_vmf.cpp  optimizationSO3_vmfCF.cpp  testReduction.cpp
src/deprecated/: realtimeMF.cpp  testMFextractionCUDA.cpp
